# mmsys24-starlink-livestreaming

./: .gitignore  .gitmodules  Dockerfile-dashjs  Dockerfile-livesim2  Dockerfile-nginx  Dockerfile-nginx-emulation  Dockerfile-runner  README.md  batch.json.example  build.sh  docker-compose-emulation.yaml  docker-compose-ingest.yaml  docker-compose-server.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
etc/nginx/conf.d/: livesim2.conf
experiments/: batch-emulation.json  batch-example.json  batch-experiment.json
runner/: Dockerfile  batch_runner.py  config.py  plot.py  requirements.txt  single_runner.py  tc-trace.py  tc.py  video.py
runner/trace/: convert.py  convert_iperf3.py  plot-trace.py  plot.py
shaper/: entrypoint.sh  supervisord.conf
stats-server/: Dockerfile  app.py  docker-compose.yaml  requirements.txt
terraform/: .terraform.lock.hcl  cloud-config.yaml  cloudinit.tf  firewall.tf  keypair.tf  main.tf  terraform.tfvars.example  variables.tf  vpc.tf
webassembly/: Dockerfile  index.html  nginx.conf
