[tool.poetry]
name = "mmsys24-starlink-livestreaming"
version = "0.1.0"
description = ""
authors = ["clarkzjw <clarkzjw@uvic.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
flask = "^3.0.0"
pytz = "^2023.3.post1"
pymongo = "^4.6.1"
selenium = "^4.16.0"
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
